<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!--<item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"/>-->
    
    <item
        android:id="@+id/myPanels"
        android:title="@string/my_panels"
        app:showAsAction="never"
        />

   <!-- <item
        android:id="@+id/manageFeed"
        android:title="@string/my_panels"
        app:showAsAction="never"
        />-->
    <item
        android:id="@+id/myProfile"
        android:title="@string/my_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>