<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/view"
        android:orientation="vertical"
        >

    </View>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/playpuzz_icon"
        android:layout_centerHorizontal="true"
        android:src="@drawable/panelq_logo"
        android:layout_marginTop="40dp"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-40dp"
        android:layout_below="@id/playpuzz_icon"
        app:cardPreventCornerOverlap="false">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_horizontal"
            android:indeterminate="true"
            android:visibility="invisible"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email_address"
                    app:boxStrokeWidth="0.5dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    app:boxStrokeWidth="0.5dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:counterEnabled="true"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>



