<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QnAActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createPanelAccountToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:id="@+id/progress_horizontal"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center_horizontal"
            >



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/question"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/question"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/answer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/one_word_answer"
                app:boxStrokeWidth="0.5dp"
                android:layout_marginTop="20dp"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/createPostButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_background"
                android:text="@string/post"
                android:textAllCaps="false"
                android:textSize="18sp"  />


        </LinearLayout>
    </ScrollView>
</LinearLayout>