<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewPanelActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createPanelAccountToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:id="@+id/progress_horizontal"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center_horizontal"
            >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:id="@+id/choosenProfileImage"

        android:src="@drawable/panelq_logo"
        app:civ_border_width="1dp"
        app:civ_border_color="#FF000000"
        />


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-30dp"
                android:src="@drawable/ic_camera"
                android:id="@+id/chooseProfileButton"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/panelName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/panel_name"
                app:boxStrokeWidth="0.5dp"
                android:layout_marginTop="20dp"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/panelDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/panel_description"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/createPanelButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/create_panel"
                android:textAllCaps="false"
                android:textSize="18sp"  />


        </LinearLayout>
    </ScrollView>
</LinearLayout>